test/parsing/ferguson/comment-test.good
comment-test.chpl:10: error: end-of-file in comment
comment-test.chpl:6: note: unterminated comment started here
